generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum TaskStatus {
  BACKLOG
  SPRINT
  DONE
}

enum TaskType {
  EPIC
  PBI
  TASK
  ROUTINE
}

enum AiSuggestionType {
  TIP
  SCORE
  SPLIT
}

enum AiPrepType {
  EMAIL
  IMPLEMENTATION
  CHECKLIST
}

enum AiPrepStatus {
  PENDING
  APPROVED
  APPLIED
  REJECTED
}

enum AiProvider {
  OPENAI
  OPENAI_COMPATIBLE
  ANTHROPIC
  GEMINI
}

enum UserRole {
  ADMIN
  USER
}

enum SprintStatus {
  ACTIVE
  CLOSED
}

enum RoutineCadence {
  DAILY
  WEEKLY
}

enum IntakeSource {
  MEMO
  SLACK
  DISCORD
  EMAIL
  CALENDAR
}

enum IntakeStatus {
  PENDING
  CONVERTED
  DISMISSED
}

enum MemoryScope {
  USER
  WORKSPACE
}

enum MemoryValueType {
  STRING
  NUMBER
  BOOL
  JSON
  RATIO
  DURATION_MS
  HISTOGRAM_24x7
  RATIO_BY_TYPE
}

enum MemorySource {
  EXPLICIT
  INFERRED
}

enum MemoryStatus {
  ACTIVE
  REJECTED
  STALE
}

enum MemoryQuestionStatus {
  PENDING
  ACCEPTED
  REJECTED
  HOLD
}

model User {
  id                     String                   @id @default(cuid())
  name                   String?
  email                  String?                  @unique
  emailVerified          DateTime?
  image                  String?
  role                   UserRole                 @default(USER)
  disabledAt             DateTime?
  onboardingCompletedAt  DateTime?
  accounts               Account[]
  sessions               Session[]
  memberships            WorkspaceMember[]
  workspacesOwned        Workspace[]
  password               UserPassword?
  emailTokens            EmailVerificationToken[]
  resetTokens            PasswordResetToken[]
  auditLogsAsActor       AuditLog[]               @relation("AuditActor")
  auditLogsAsTarget      AuditLog[]               @relation("AuditTargetUser")
  tasks                  Task[]
  assignedTasks          Task[]                   @relation("TaskAssignee")
  velocityEntries        VelocityEntry[]
  userAutomationSettings UserAutomationSetting[]
  aiSuggestions          AiSuggestion[]
  sprints                Sprint[]
  intakeItems            IntakeItem[]
  taskStatusEvents       TaskStatusEvent[]        @relation("StatusEventActor")
  memoryClaims           MemoryClaim[]
  memoryMetrics          MemoryMetric[]
  memoryQuestions        MemoryQuestion[]
  createdAt              DateTime                 @default(now())
  updatedAt              DateTime                 @updatedAt
}

model Account {
  id                String   @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?
  user              User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
}

model UserPassword {
  id        String   @id @default(cuid())
  userId    String   @unique
  hash      String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model EmailVerificationToken {
  id        String   @id @default(cuid())
  userId    String
  token     String   @unique
  expiresAt DateTime
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
}

model PasswordResetToken {
  id        String   @id @default(cuid())
  userId    String
  token     String   @unique
  expiresAt DateTime
  used      Boolean  @default(false)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model Workspace {
  id                     String                  @id @default(cuid())
  name                   String
  ownerId                String
  owner                  User                    @relation(fields: [ownerId], references: [id], onDelete: Cascade)
  members                WorkspaceMember[]
  tasks                  Task[]
  velocityEntries        VelocityEntry[]
  userAutomationSettings UserAutomationSetting[]
  aiSuggestions          AiSuggestion[]
  invites                WorkspaceInvite[]
  auditLogs              AuditLog[]
  sprints                Sprint[]
  intakeItems            IntakeItem[]
  statusEvents           TaskStatusEvent[]
  memoryClaims           MemoryClaim[]
  memoryMetrics          MemoryMetric[]
  memoryQuestions        MemoryQuestion[]
  focusQueues            FocusQueue[]
  createdAt              DateTime                @default(now())
  updatedAt              DateTime                @updatedAt
}

model WorkspaceMember {
  id          String    @id @default(cuid())
  workspaceId String
  userId      String
  role        String    @default("member")
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt   DateTime  @default(now())

  @@unique([workspaceId, userId])
  @@index([userId])
}

model WorkspaceInvite {
  id          String    @id @default(cuid())
  workspaceId String
  email       String
  role        String    @default("member")
  token       String    @unique
  expiresAt   DateTime
  acceptedAt  DateTime?
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  createdAt   DateTime  @default(now())
}

model AuditLog {
  id                String     @id @default(cuid())
  actorId           String
  action            String
  targetUserId      String?
  targetWorkspaceId String?
  metadata          Json?
  actor             User       @relation("AuditActor", fields: [actorId], references: [id], onDelete: Cascade)
  targetUser        User?      @relation("AuditTargetUser", fields: [targetUserId], references: [id], onDelete: SetNull)
  targetWorkspace   Workspace? @relation(fields: [targetWorkspaceId], references: [id], onDelete: SetNull)
  createdAt         DateTime   @default(now())
}

model Task {
  id           String           @id @default(uuid())
  title        String
  description  String           @default("")
  definitionOfDone String        @default("")
  checklist    Json?
  points       Int
  urgency      String
  risk         String
  status       TaskStatus       @default(BACKLOG)
  type         TaskType         @default(PBI)
  parentId     String?
  sprintId     String?
  dueDate      DateTime?
  assigneeId   String?
  tags         String[]
  createdAt    DateTime         @default(now())
  updatedAt    DateTime         @updatedAt
  suggestions  AiSuggestion[]
  prepOutputs  AiPrepOutput[]
  sprint       Sprint?          @relation(fields: [sprintId], references: [id], onDelete: SetNull)
  assignee     User?            @relation("TaskAssignee", fields: [assigneeId], references: [id], onDelete: SetNull)
  userId       String?
  user         User?            @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspaceId  String?
  workspace    Workspace?       @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  parent       Task?            @relation("TaskHierarchy", fields: [parentId], references: [id], onDelete: SetNull)
  children     Task[]           @relation("TaskHierarchy")
  dependencies TaskDependency[] @relation("TaskDependencies")
  dependents   TaskDependency[] @relation("TaskDependents")
  intakeItems  IntakeItem[]
  statusEvents TaskStatusEvent[]
  routineRule  RoutineRule?

  @@index([parentId])
}

model VelocityEntry {
  id          String     @id @default(uuid())
  name        String
  points      Int
  range       String
  createdAt   DateTime   @default(now())
  userId      String?
  user        User?      @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspaceId String?
  workspace   Workspace? @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
}

model AutomationSetting {
  id        Int      @id @default(1)
  low       Int
  high      Int
  updatedAt DateTime @updatedAt
}

model AiProviderSetting {
  id        Int       @id @default(1)
  model     String
  apiKey    String
  baseUrl   String?
  enabled   Boolean   @default(true)
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
}

model AiPricing {
  id            String     @id @default(cuid())
  provider      AiProvider
  model         String
  inputUsdPerM  Float
  outputUsdPerM Float
  createdAt     DateTime   @default(now())
  updatedAt     DateTime   @updatedAt

  @@unique([provider, model])
}

model UserAutomationSetting {
  id          String     @id @default(cuid())
  low         Int
  high        Int
  stage       Int        @default(0)
  lastStageAt DateTime?
  updatedAt   DateTime   @updatedAt
  createdAt   DateTime   @default(now())
  userId      String
  user        User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspaceId String?
  workspace   Workspace? @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@unique([userId, workspaceId])
}

model AutomationStageHistory {
  id          String     @id @default(cuid())
  userId      String
  user        User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspaceId String?
  workspace   Workspace? @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  stage       Int
  reason      String?
  createdAt   DateTime   @default(now())

  @@index([userId, createdAt])
  @@index([workspaceId, createdAt])
}

model RoutineRule {
  id          String         @id @default(cuid())
  taskId      String         @unique
  task        Task           @relation(fields: [taskId], references: [id], onDelete: Cascade)
  cadence     RoutineCadence
  nextAt      DateTime
  timezone    String         @default("UTC")
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt
}

model AiSuggestion {
  id               String           @id @default(uuid())
  type             AiSuggestionType
  taskId           String?
  task             Task?            @relation(fields: [taskId], references: [id], onDelete: Cascade)
  inputTitle       String
  inputDescription String
  output           String
  createdAt        DateTime         @default(now())
  userId           String?
  user             User?            @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspaceId      String?
  workspace        Workspace?       @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
}

model AiPrepOutput {
  id          String       @id @default(uuid())
  type        AiPrepType
  status      AiPrepStatus @default(PENDING)
  taskId      String
  task        Task         @relation(fields: [taskId], references: [id], onDelete: Cascade)
  output      String
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  userId      String?
  user        User?        @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspaceId String?
  workspace   Workspace?   @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@index([taskId, createdAt])
}

model AiUsage {
  id               String   @id @default(cuid())
  action           String
  provider         String
  model            String
  promptTokens     Int?
  completionTokens Int?
  totalTokens      Int?
  costUsd          Float?
  usageSource      String
  source           String?
  taskId           String?
  userId           String?
  user             User?     @relation(fields: [userId], references: [id], onDelete: SetNull)
  workspaceId      String?
  workspace        Workspace? @relation(fields: [workspaceId], references: [id], onDelete: SetNull)
  createdAt        DateTime @default(now())

  @@index([workspaceId, createdAt])
  @@index([userId, createdAt])
  @@index([action, createdAt])
}

model Sprint {
  id             String       @id @default(cuid())
  name           String
  status         SprintStatus @default(ACTIVE)
  capacityPoints Int
  startedAt      DateTime     @default(now())
  plannedEndAt   DateTime?
  endedAt        DateTime?
  userId         String
  user           User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspaceId    String
  workspace      Workspace    @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  tasks          Task[]
  createdAt      DateTime     @default(now())
  updatedAt      DateTime     @updatedAt
}

model TaskDependency {
  taskId      String
  dependsOnId String
  task        Task   @relation("TaskDependencies", fields: [taskId], references: [id], onDelete: Cascade)
  dependsOn   Task   @relation("TaskDependents", fields: [dependsOnId], references: [id], onDelete: Cascade)

  @@id([taskId, dependsOnId])
}

model TaskStatusEvent {
  id          String      @id @default(cuid())
  taskId      String
  fromStatus  TaskStatus?
  toStatus    TaskStatus
  actorId     String?
  source      String?
  workspaceId String?
  task        Task        @relation(fields: [taskId], references: [id], onDelete: Cascade)
  actor       User?       @relation("StatusEventActor", fields: [actorId], references: [id], onDelete: SetNull)
  workspace   Workspace?  @relation(fields: [workspaceId], references: [id], onDelete: SetNull)
  createdAt   DateTime    @default(now())

  @@index([taskId, createdAt])
  @@index([workspaceId, createdAt])
}

model MemoryType {
  id           String          @id @default(cuid())
  key          String
  scope        MemoryScope
  valueType    MemoryValueType
  unit         String?
  granularity  String
  updatePolicy String
  decayDays    Int?
  description  String?
  createdAt    DateTime        @default(now())
  updatedAt    DateTime        @updatedAt
  claims       MemoryClaim[]
  metrics      MemoryMetric[]
  questions    MemoryQuestion[]

  @@unique([key, scope])
  @@index([scope])
}

model MemoryClaim {
  id          String       @id @default(cuid())
  typeId      String
  type        MemoryType   @relation(fields: [typeId], references: [id], onDelete: Cascade)
  userId      String?
  user        User?        @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspaceId String?
  workspace   Workspace?   @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  valueStr    String?
  valueNum    Float?
  valueBool   Boolean?
  valueJson   Json?
  confidence  Float        @default(0.5)
  source      MemorySource @default(INFERRED)
  status      MemoryStatus @default(ACTIVE)
  validFrom   DateTime     @default(now())
  validTo     DateTime?
  evidence    Json?
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt

  @@index([typeId, userId])
  @@index([typeId, workspaceId])
}

model MemoryQuestion {
  id          String               @id @default(cuid())
  typeId      String
  type        MemoryType           @relation(fields: [typeId], references: [id], onDelete: Cascade)
  userId      String?
  user        User?                @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspaceId String?
  workspace   Workspace?           @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  valueStr    String?
  valueNum    Float?
  valueBool   Boolean?
  valueJson   Json?
  confidence  Float                @default(0.7)
  status      MemoryQuestionStatus @default(PENDING)
  createdAt   DateTime             @default(now())
  updatedAt   DateTime             @updatedAt

  @@index([typeId, status])
  @@index([userId, status])
  @@index([workspaceId, status])
}

model MemoryMetric {
  id          String     @id @default(cuid())
  typeId      String
  type        MemoryType @relation(fields: [typeId], references: [id], onDelete: Cascade)
  userId      String?
  user        User?      @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspaceId String?
  workspace   Workspace? @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  windowStart DateTime
  windowEnd   DateTime
  valueNum    Float?
  valueJson   Json?
  computedAt  DateTime   @default(now())

  @@unique([typeId, userId, windowStart, windowEnd])
  @@unique([typeId, workspaceId, windowStart, windowEnd])
  @@index([workspaceId, windowStart])
  @@index([userId, windowStart])
}

model FocusQueue {
  id          String     @id @default(cuid())
  workspaceId String
  workspace   Workspace  @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  items       Json
  computedAt  DateTime   @default(now())

  @@index([workspaceId, computedAt])
}

model IntakeItem {
  id          String        @id @default(uuid())
  source      IntakeSource
  status      IntakeStatus  @default(PENDING)
  title       String
  body        String
  payload     Json?
  userId      String
  user        User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspaceId String?
  workspace   Workspace?    @relation(fields: [workspaceId], references: [id], onDelete: SetNull)
  taskId      String?
  task        Task?         @relation(fields: [taskId], references: [id], onDelete: SetNull)
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  @@index([workspaceId, status])
  @@index([userId, status])
}
